<resources>
    <string name="app_name">TheRealSocialNetwork</string>

    <!--Main Activity-->
    <string name="main_post_item_comment">Comentar</string>

    <!--Login Activity-->
    <string name="login_mail_hint">Ingrese email</string>
    <string name="login_password_hint">Ingrese contraseña</string>


    <!--Register Activity-->
    <string name="register_mail_hint">Ingrese email</string>
    <string name="register_password_hint">Ingrese contraseña</string>
    <string name="register_confirmation_password_hint">Confirme contraseña</string>
    
    <!--AddPost Activity-->
    <string name="addpost_title_hint">Título</string>
    <string name="addpost_description_hint">Descripcion</string>
    <string name="addpost_select_image_hint">Imagen</string>
    <string name="addpost_share_button_text">Compartir</string>
    <string name="addpost_successful_added_title">Exito</string>
    <string name="addpost_successful_added_message">Se ha subido su post exitosamente!</string>
    <string name="addpost_successful_added_button">Aceptar</string>
    <string name="addpost_dialog_take_photo">Tomar una foto</string>
    <string name="addpost_dialog_open_gallery">Seleccionar imagen</string>

    <!--Permission Explanations-->
    <string name="permission_needded_title">Permisos</string>
    <string name="permission_needed_ok_button">Aceptar</string>
    <string name="read_external_storage_permission">Necesitamos que acepte los permisos de lectura de almacenamiento externo, para poder seleccionar un archivo.</string>

    <!--Common actions-->
    <string name="login_button_text">Ingresar</string>
    <string name="register_button_text">Registrarse</string>
    <string name="logout">Salir</string>
    <string name="change_theme">Cambiar tema</string>




</resources>
