<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="activity"
            type="com.sanicorporation.therealsocialnetwork.activities.register.RegisterActivity" />
        <variable
            name="viewmodel"
            type="com.sanicorporation.therealsocialnetwork.activities.register.RegisterViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.register.RegisterActivity">


        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:hint="@string/register_mail_hint"
            android:text="@={viewmodel.email}"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_input"
            app:layout_constraintVertical_chainStyle="packed"
            />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:hint="@string/register_password_hint"
            android:text="@={viewmodel.password}"
            android:inputType="textPassword"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/confirmation_password_input"
            app:layout_constraintTop_toBottomOf="@id/username_input"
            android:layout_marginTop="@dimen/default_vertical_input_margin"
            />

        <EditText
            android:id="@+id/confirmation_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:hint="@string/register_confirmation_password_hint"
            android:text="@={viewmodel.confirmPassword}"
            android:inputType="textPassword"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            android:layout_marginTop="@dimen/default_vertical_input_margin"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:onClick="@{viewmodel::onClickRegister}"
            app:layout_constraintTop_toBottomOf="@id/confirmation_password_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:textSize="@dimen/default_text_size"
            android:layout_marginTop="@dimen/default_vertical_input_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
