<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable
            name="handler"
            type="com.sanicorporation.therealsocialnetwork.activities.login.LoginActivity" />
        <variable
            name="viewmodel"
            type="com.sanicorporation.therealsocialnetwork.activities.login.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.login.LoginActivity">

        <include
            android:id="@+id/progress_bar"
            layout="@layout/loading"
            android:visibility="@{viewmodel.showLoading ? View.VISIBLE : View.GONE}"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/password_layout"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin">

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:hint="@string/login_mail_hint"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.email}"
                android:textSize="@dimen/default_text_size"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintTop_toBottomOf="@id/username_layout"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="@dimen/default_vertical_input_margin"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            >

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:hint="@string/login_password_hint"
                android:text="@={viewmodel.password}"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_text"
                android:layout_marginHorizontal="@dimen/default_horizontal_margin"
                android:theme="@style/SocialMediaButtons"
                android:enabled="@{!viewmodel.showLoading}"
                style="@style/Widget.AppCompat.Button.Colored"
                android:onClick="@{() -> handler.onClickLogin()}"
                app:layout_constraintTop_toBottomOf="@id/password_layout"
                app:layout_constraintBottom_toTopOf="@id/register_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:layout_marginTop="@dimen/default_vertical_input_margin"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button_text"
                android:layout_marginHorizontal="@dimen/default_horizontal_margin"
                android:theme="@style/SocialMediaButtons"
                style="@style/Widget.AppCompat.Button.Colored"
                android:enabled="@{!viewmodel.showLoading}"
                android:onClick="@{() -> handler.onClickRegister()}"
                app:layout_constraintTop_toBottomOf="@id/login_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:layout_marginTop="@dimen/default_vertical_input_margin"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
