<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"></import>
        <variable
            name="viewmodel"
            type="com.sanicorporation.therealsocialnetwork.activities.add_post.AddPostViewModel" />
        <variable
            name="handler"
            type="com.sanicorporation.therealsocialnetwork.activities.add_post.AddPostActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <include
            android:id="@+id/progress_bar"
            layout="@layout/loading"
            android:visibility="@{viewmodel.showLoading ? View.VISIBLE : View.GONE}"
            />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:theme="@style/CustomToolbar"
            app:layout_constraintTop_toTopOf="parent"
            />

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/confirm_button"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/post_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    bind:visibiltyImage="@{viewmodel.bitmap}"
                    bind:imageBitmap="@{viewmodel.bitmap}"
                    app:layout_constraintTop_toTopOf="parent"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/post_image">

                    <EditText
                        android:id="@+id/title_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.title}"
                        android:hint="@string/addpost_title_hint"
                        android:textSize="@dimen/default_text_size"
                        android:maxLength="30"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/description_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/title_layout" >

                <EditText
                    android:id="@+id/description_inpupt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addpost_description_hint"
                    android:maxLength="30"
                    android:text="@={viewmodel.description}"
                    android:textSize="@dimen/default_text_size">

                </EditText>

                </com.google.android.material.textfield.TextInputLayout>




                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@id/description_layout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/default_vertical_margin"
                    android:src="@drawable/ic_photo_camera"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:tint="?attr/colorPrimary"
                    android:background="@null"
                    android:onClick="@{() -> handler.onClickCamera()}"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addpost_share_button_text"
            android:theme="@style/SocialMediaButtons"
            style="@style/Widget.AppCompat.Button.Colored"
            android:enabled="@{!viewmodel.showLoading}"
            android:onClick="@{() -> handler.onClickShare()}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
